refactor: add null checks and tests for DefaultPostCrudService